--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
 </head>
 <body>
 <header>
-  <h1>Prof. MateSanda • Entrenamiento de Matemática para Ingresantes 1 año (Escuela 3117"La Reyes")</h1>
+  <div class="brand">
+    <img src="img/logo-escuela.png" alt="Logo Escuela 3117" class="logo" />
+    <h1>Prof. MateSanda • Entrenamiento de Matemática (Escuela 3117)</h1>
+  </div>
 </header>
 
 <main>
