--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
 <header>
   <div class="brand">
-    <img src="img/logo-escuela.png" alt="Logo Escuela 3117" class="logo" />
+    <img src="img/logoeEcuela.png" alt="Logo Escuela 3117" class="logo" />
     <h1>Prof. MateSanda • Entrenamiento de Matemática (Escuela 3117)</h1>
   </div>
 </header>
