--- a/index.html
+++ b/index.html
@@ -27,16 +27,9 @@
 </head>
 <body>
 <header>
-  <div class="brand">
-    <img src="img/logoeEcuela.png" alt="Logo Escuela 3117" class="logo" />
-    <h1>Prof. MateSanda • Entrenamiento de Matemática (Escuela 3117)</h1>
+    <h1>Prof. MateSanda • Entrenamiento de Matemática para Ingresantes de 1 año (Escuela 3117 "La Reyes")</h1>
   </div>
-</header>
-header .brand { display: flex; align-items: center; gap: 12px; }
-header .logo { height: 44px; width: auto; border-radius: 6px; background: #fff0; }
-@media (max-width: 480px) {
-  header h1 { font-size: 18px; }
-  header .logo { height: 36px; }
+<
 }
 <main>
   <div class="card" id="bienvenida">
