--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- Contenido HTML de la app (Prof. MateSanda)
+Contenido HTML de la app (Prof. MateSanda)
 html_content = r"""<!doctype html>
 <html lang="es">
 <head>
@@ -28,7 +28,7 @@ html_content = r"""<!doctype html>
 </head>
 <body>
 <header>
-  <h1>Prof. MateSanda • Entrenamiento de Matemática (Escuela 3117)</h1>
+  <h1>Prof. MateSanda • Entrenamiento de Matemática de ingresantes a 1 año (Escuela 3117"La Reyes")</h1>
 </header>
 <main>
   <div class="card" id="bienvenida">
@@ -205,10 +205,6 @@ function volverMenu(){
   document.getElementById('contenido').innerHTML='';
   window.scrollTo({top:0,behavior:'smooth'});
 }
-  const c = document.getElementById('contenido');
-  c.innerHTML = `
-    <div class="card">
-      <h3>Ayuda</h3>
       <div class="msg">Escribe solo números cuando se pida. En fracciones usa a/b. Pulsa “Volver al Menú” para cambiar de tema.</div>
       <div class="chips">
         <a class="btn ghost" target="_blank" href="https://wa.me/543874122849?text=Hola+necesito+ayuda">Hablar con docente</a>
