--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-Contenido HTML de la app (Prof. MateSanda)
-html_content = r"""<!doctype html>
+<!doctype html>
 <html lang="es">
 <head>
 <meta charset="utf-8" />
@@ -28,7 +27,7 @@ html_content = r"""<!doctype html>
 </head>
 <body>
 <header>
-  <h1>Prof. MateSanda • Entrenamiento de Matemática para ingresantes de 1 año (Escuela 3117!La Reyes")</h1>
+  <h1>Prof. MateSanda • Entrenamiento de Matemática para ingresantes  (Escuela 3117"La Reyes")</h1>
 </header>
 
 <main>
@@ -36,8 +35,8 @@ html_content = r"""<!doctype html>
     <h2>¡Hola! Soy el Prof. MateSanda 👋</h2>
     <p>Te doy la bienvenida al entrenamiento interactivo. Elige un tema para empezar. En cualquier momento puedes volver al menú.</p>
     <div class="chips" id="menu"></div>
-    <div class="chips" style="margin-top:10px"
-  <div id="contenido"></div>
+    <div class="chips" style="margin-top:10px">
+        <div id="contenido"></div>
   <div class="footer">
     Consejos: responde solo con números cuando se pida. Si te equivocas, verás la corrección al instante.
   </div>
@@ -207,7 +206,6 @@ function volverMenu(){
   document.getElementById('contenido').innerHTML='';
   window.scrollTo({top:0,behavior:'smooth'});
 }
-function ayuda(){
   const c = document.getElementById('contenido');
   c.innerHTML = `
     <div class="card">
@@ -264,4 +262,3 @@ renderMenu();
 </script>
 </body>
 </html>
-"""
