--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
 <header>
-  <h1>Prof. MateSanda • Entrenamiento de Matemática para ingresantes de Escuela N°3117 "La Reyes"</h1>
+  <h1>Prof. MateSanda • Entrenamiento de Matemática (Escuela 3117)</h1>
 </header>
 
 <main>
@@ -36,6 +36,11 @@
     <p>Te doy la bienvenida al entrenamiento interactivo. Elige un tema para empezar. En cualquier momento puedes volver al menú.</p>
     <div class="chips" id="menu"></div>
     <div class="chips" style="margin-top:10px">
+      <a class="btn ghost" target="_blank" href="https://wa.me/543874122849?text=Hola+quiero+empezar">Escríbeme por WhatsApp</a>
+      <button class="btn ghost" onclick="miniQuiz()">Mini‑Quiz (5 preguntas)</button>
+    </div>
+  </div>
+
   <div id="contenido"></div>
 
   <div class="footer">
