--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
 <header>
-  <h1>Prof. MateSanda • Entrenamiento de Matemática para ingresantes (Escuela 3117"La Reyes")</h1>
+  <h1>Entrenamiento de Matemática para ingresantes (Escuela N° 3117"La Reyes")</h1>
 </header>
 
 <main>
