--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
 <header>
-  <h1>Entrenamiento de Matemática para ingresantes (Escuela N° 3117"La Reyes")</h1>
+  <h1>Entrenamiento de Matemática para ingresantes (Escuela N° 3117"La Reyes")Este flujo de trabajo ha sido creado con Inteligencia Artificial en base a la cartlla enregada en la unidad escolar </h1>
 </header>
 
 <main>
