--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
 <header>
-  <h1>Entrenamiento de Matemática para ingresantes (Escuela N° 3117"La Reyes")Este flujo de trabajo ha sido creado con Inteligencia Artificial en base a la cartlla enregada en la unidad escolar </h1>
+  <h1>Entrenamiento de Matemática para ingresantes (Escuela N° 3117"La Reyes")Este flujo de trabajo ha sido creado con Inteligencia Artificial en base a la cartilla enregada en la unidad escolar </h1>
 </header>
 
 <main>
@@ -118,7 +118,7 @@ const temas = [
     ]
   },
   {
-    id:"geometria", titulo:"Geometría (planas)",
+    id:"geometria", titulo:"Geometría (plana)",
     exp:"Perímetro: suma de lados. Áreas: Rectángulo A= b×h; Triángulo A=(b×h)/2; Círculo A=πr², P=2πr.",
     ejemplo:"Rectángulo 8×5 → A=40 cm²; P=26 cm.",
     preguntas:[
