--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
   header h1{margin:0;font-size:20px}
   main{max-width:900px;margin:0 auto;padding:16px}
   .card{background:var(--card);border-radius:12px;box-shadow:0 6px 18px rgba(0,0,0,.06);padding:16px;margin:12px 0}
-  .row{display:flex;flex-wrap:wrap;gap:12px}
   .btn{border:0;border-radius:10px;padding:12px 14px;background:#eef2ff;color:#1e3a8a;cursor:pointer}
   .btn.primary{background:var(--c1);color:#fff}
   .btn.ghost{background:#fff;border:1px solid #e5e7eb;color:#111}
   .btn.toggle{background:#e2e8f0;color:#0f172a}
   .btn.toggle.active{background:#0ea5e9;color:#fff}
   .chips{display:flex;flex-wrap:wrap;gap:8px;margin-top:8px}
-  .hidden{display:none}
   .msg{padding:12px 14px;border-radius:10px;margin:10px 0;background:#f1f5f9}
   .ok{color:var(--ok);font-weight:600}
   .err{color:var(--err);font-weight:600}
@@ -26,8 +24,7 @@
   .footer{font-size:12px;color:#475569;margin-top:16px}
   input[type=text], input[type=number]{padding:10px;border:1px solid #e5e7eb;border-radius:8px;width:120px}
   .q{margin:10px 0}
-
-  /* Cinturón de seguridad: bloquea cualquier resto de WhatsApp/Ayuda */
+  /* Bloquea cualquier rastro de WhatsApp/Ayuda */
   a[href*="wa.me"], a[href*="api.whatsapp.com"],
   #btn-whatsapp, [id*="whatsapp" i], [class*="whatsapp" i],
   #btn-ayuda, [id*="ayuda" i], .ayuda { display: none !important; }
@@ -45,15 +42,15 @@
 
     <div class="chips" style="align-items:center;">
       <span class="muted">Dificultad:</span>
-      <button id="dif_facil" class="btn toggle" onclick="setDificultad('facil')">Fácil</button>
-      <button id="dif_medio" class="btn toggle active" onclick="setDificultad('medio')">Medio</button>
-      <button id="dif_dificil" class="btn toggle" onclick="setDificultad('dificil')">Difícil</button>
+      <button id="dif_facil" class="btn toggle">Fácil</button>
+      <button id="dif_medio" class="btn toggle active">Medio</button>
+      <button id="dif_dificil" class="btn toggle">Difícil</button>
     </div>
 
     <div class="chips" id="menu"></div>
 
     <div class="chips" style="margin-top:10px">
-      <button class="btn ghost" onclick="miniQuiz()">Mini‑Quiz (5 preguntas)</button>
+      <button id="btn_quiz" class="btn ghost">Mini‑Quiz (5 preguntas)</button>
     </div>
   </div>
 
@@ -65,22 +62,7 @@
 </main>
 
 <script>
-// Dificultad global
 let dificultad = 'medio';
-function setDificultad(d){
-  dificultad = d;
-  ['facil','medio','dificil'].forEach(k=>{
-    const el = document.getElementById('dif_'+k);
-    if(el) el.classList.toggle('active', k===d);
-  });
-  const h3 = document.querySelector('#contenido h3');
-  if(h3){
-    const t = temas.find(x=>x.titulo===h3.textContent);
-    if(t) renderTema(t.id);
-  }
-}
-
-// Helpers
 function rint(a,b){ return Math.floor(Math.random()*(b-a+1))+a; }
 function pickRange(easy, medium, hard){ return dificultad==='facil'?easy : (dificultad==='dificil'?hard:medium); }
 function gcd(a,b){ a=Math.abs(a); b=Math.abs(b); while(b){ [a,b]=[b,a%b]; } return a||1; }
@@ -88,10 +70,8 @@ function simpFrac(num, den){ const g=gcd(num,den); return `${num/g}/${den/g}`; }
 function normList(v){ return v.split(/[,\s]+/).filter(x=>x).map(x=>x.replace(/\s/g,'')).join(',').replace(/,+$/,''); }
 function near(v, target, tol){ const x = parseFloat(String(v).replace(',', '.')); return isFinite(x) && Math.abs(x - target) <= tol; }
 
-// Temas con ejercicios generados según dificultad
 const temas = [
-  {
-    id:"naturales", titulo:"Números Naturales",
+  { id:"naturales", titulo:"Números Naturales",
     exp:"Los números naturales sirven para contar: 1, 2, 3, … No incluyen decimales ni negativos. El 0 indica ausencia.",
     ejemplo:"Si tengo 5 cuadernos y compro 3 más: 5 + 3 = 8.",
     preguntas: () => {
@@ -109,8 +89,7 @@ const temas = [
       ];
     }
   },
-  {
-    id:"mult_div", titulo:"Múltiplos y Divisores",
+  { id:"mult_div", titulo:"Múltiplos y Divisores",
     exp:"Un múltiplo de un número se obtiene al multiplicarlo por 1, 2, 3, …; un divisor 'cabe exacto' en otro.",
     ejemplo:"¿12 es múltiplo de 6? Sí, 6×2=12. ¿4 es divisor de 20? Sí, 20÷4=5.",
     preguntas: () => {
@@ -130,8 +109,7 @@ const temas = [
       ];
     }
   },
-  {
-    id:"enteros", titulo:"Números Enteros",
+  { id:"enteros", titulo:"Números Enteros",
     exp:"Incluyen negativos, cero y positivos: … −3, −2, −1, 0, 1, 2, 3, …",
     ejemplo:"−5 + 9 = 4.",
     preguntas: () => {
@@ -158,8 +136,7 @@ const temas = [
       ];
     }
   },
-  {
-    id:"fracciones", titulo:"Fracciones",
+  { id:"fracciones", titulo:"Fracciones",
     exp:"a/b representa partes iguales de un todo (b≠0). Simplificar es dividir numerador y denominador por el mismo número.",
     ejemplo:"8/12 simplifica a 2/3 (dividiendo por 4).",
     preguntas: () => {
@@ -172,11 +149,9 @@ const temas = [
       const mm = (c*d)/gcd(c,d);
       const sNum = a*(mm/c) + b*(mm/d);
       const simp = simpFrac(sNum, mm);
-      const decPoolEasy = [0.25,0.5,0.75], decPoolMed = [0.2,0.25,0.4,0.5,0.75], decPoolHard=[0.125,0.2,0.25,0.4,0.5,0.75];
-      const pool = dificultad==='facil'?decPoolEasy : dificultad==='dificil'?decPoolHard : decPoolMed;
+      const pool = dificultad==='facil' ? [0.25,0.5,0.75] : (dificultad==='dificil' ? [0.125,0.2,0.25,0.4,0.5,0.75] : [0.2,0.25,0.4,0.5,0.75]);
       const dec = pool[rint(0,pool.length-1)];
       const mapDec = {0.125:'1/8',0.2:'1/5',0.25:'1/4',0.4:'2/5',0.5:'1/2',0.75:'3/4'};
-      const fracDec = mapDec[dec];
       return [
         { enunciado:`¿Cuál es mayor: ${f1[0]}/${f1[1]} o ${f2[0]}/${f2[1]}? (responde a/b)`, tipo:"texto",
           resp:mayor, valid:(v)=>v.replace(/\s/g,'')===mayor, explic:`${mayor} es mayor.` },
@@ -184,12 +159,11 @@ const temas = [
           resp:simp, valid:(v)=>v.replace(/\s/g,'')===simp,
           explic:`m.c.m. ${c},${d} = ${mm} → suma ${sNum}/${mm} = ${simp}.` },
         { enunciado:`Convierte ${String(dec).replace('.',',')} a fracción simplificada.`, tipo:"texto",
-          resp:fracDec, valid:(v)=>v.replace(/\s/g,'')===fracDec, explic:`${dec} = ${fracDec}.` }
+          resp:mapDec[dec], valid:(v)=>v.replace(/\s/g,'')===mapDec[dec], explic:`${dec} = ${mapDec[dec]}.` }
       ];
     }
   },
-  {
-    id:"ecuaciones", titulo:"Ecuaciones (1er grado)",
+  { id:"ecuaciones", titulo:"Ecuaciones (1er grado)",
     exp:"Resolver es dejar sola la incógnita aplicando operaciones inversas en ambos lados.",
     ejemplo:"x + 7 = 15 → x = 15 − 7 = 8.",
     preguntas: () => {
@@ -204,8 +178,7 @@ const temas = [
       ];
     }
   },
-  {
-    id:"proporcionalidad", titulo:"Proporcionalidad",
+  { id:"proporcionalidad", titulo:"Proporcionalidad",
     exp:"Si al multiplicar una magnitud la otra se multiplica igual, son directamente proporcionales (regla de 3).",
     ejemplo:"3 cuadernos $1500 → unidad $500 → 5 cuadernos $2500.",
     preguntas: () => {
@@ -228,8 +201,7 @@ const temas = [
       ];
     }
   },
-  {
-    id:"geometria", titulo:"Geometría (planas)",
+  { id:"geometria", titulo:"Geometría (planas)",
     exp:"Perímetro: suma de lados. Áreas: Rectángulo A= b×h; Triángulo A=(b×h)/2; Círculo A=πr², P=2πr.",
     ejemplo:"Rectángulo 8×5 → A=40 cm²; P=26 cm.",
     preguntas: () => {
@@ -249,17 +221,29 @@ const temas = [
   }
 ];
 
-// UI y flujo
 function renderMenu(){
   const m = document.getElementById('menu');
+  if(!m) return;
   m.innerHTML = '';
   temas.forEach(t=>{
     const b = document.createElement('button');
     b.className='btn';
     b.textContent = t.titulo;
-    b.onclick = ()=>renderTema(t.id);
+    b.addEventListener('click', ()=>renderTema(t.id));
     m.appendChild(b);
   });
+}
+function setDificultad(d){
+  dificultad = d;
+  ['facil','medio','dificil'].forEach(k=>{
+    const el = document.getElementById('dif_'+k);
+    if(el) el.classList.toggle('active', k===d);
+  });
+  const h3 = document.querySelector('#contenido h3');
+  if(h3){
+    const t = temas.find(x=>x.titulo===h3.textContent);
+    if(t) renderTema(t.id);
+  }
 }
 function renderTema(id){
   const t = temas.find(x=>x.id===id);
@@ -272,13 +256,17 @@ function renderTema(id){
       <div class="msg"><b>Ejemplo:</b> ${t.ejemplo}</div>
       <div id="qs"></div>
       <div class="chips">
-        <button class="btn primary" onclick="volverMenu()">Volver al Menú</button>
-        <button class="btn" onclick="renderTema('${t.id}')">Practicar más</button>
-        <button class="btn" onclick="siguiente('${t.id}')">Siguiente tema</button>
+        <button id="btn_volver" class="btn primary">Volver al Menú</button>
+        <button id="btn_practicar" class="btn">Practicar más</button>
+        <button id="btn_siguiente" class="btn">Siguiente tema</button>
       </div>
     </div>
   `;
   renderPreguntas(pregs);
+  // listeners de los 3 botones del tema
+  document.getElementById('btn_volver').addEventListener('click', volverMenu);
+  document.getElementById('btn_practicar').addEventListener('click', ()=>renderTema(t.id));
+  document.getElementById('btn_siguiente').addEventListener('click', ()=>siguiente(t.id));
   window.scrollTo({top:0,behavior:'smooth'});
 }
 function renderPreguntas(pregs){
@@ -293,11 +281,13 @@ function renderPreguntas(pregs){
     div.innerHTML = `
       <div>${i+1}) ${q.enunciado}</div>
       <div style="margin:6px 0">${input}
-        <button class="btn" onclick="check(${i})">Comprobar</button>
+        <button class="btn" id="btn_chk_${i}">Comprobar</button>
       </div>
       <div id="fb_${i}"></div>
     `;
     cont.appendChild(div);
+    // listener de comprobar
+    document.getElementById(`btn_chk_${i}`).addEventListener('click', ()=>check(i));
   });
   window.currentPregs = pregs;
 }
@@ -309,9 +299,7 @@ function check(i){
   else if(q.tipo==='num'){ ok = Number(v)==q.resp; }
   else { ok = v.replace(/\s/g,'').toLowerCase()===String(q.resp).replace(/\s/g,'').toLowerCase(); }
   const fb = document.getElementById('fb_'+i);
-  fb.innerHTML = ok
-    ? `<div class="ok">¡Correcto! ✅</div>`
-    : `<div class="err">No es correcto. ${q.explic}</div>`;
+  fb.innerHTML = ok ? `<div class="ok">¡Correcto! ✅</div>` : `<div class="err">No es correcto. ${q.explic}</div>`;
 }
 function siguiente(id){
   const idx = temas.findIndex(t=>t.id===id);
@@ -322,103 +310,109 @@ function volverMenu(){
   document.getElementById('contenido').innerHTML='';
   window.scrollTo({top:0,behavior:'smooth'});
 }
-
-// Mini‑Quiz dinámico con dificultad
 function miniQuiz(){
   const rA = pickRange([1,6],[1,9],[3,15]);
   const rB = pickRange([3,9],[3,12],[8,20]);
   const a1 = -rint(...rA), b1 = rint(...rB);
   const q1 = { e:`Suma: ${a1} + ${b1} = ?`, tipo:"num", r:a1 + b1, x:`${a1} + ${b1} = ${a1+b1}.` };
-
   const rM = pickRange([2,6],[3,9],[4,12]);
   const rN = pickRange([3,4],[3,6],[4,7]);
   const m = rint(...rM), nmax = rint(...rN);
   const lista = Array.from({length:nmax}, (_,i)=> m*(i+1));
-  const q2 = {
-    e:`Múltiplos de ${m} hasta ${m*nmax} (escribe: ${lista.join(',')}).`,
-    tipo:"texto",
-    r:lista.join(','),
-    v:(v)=>normList(v)===lista.join(','),
-    x:`${lista.join(',')}.`
-  };
-
+  const q2 = { e:`Múltiplos de ${m} hasta ${m*nmax} (escribe: ${lista.join(',')}).`, tipo:"texto",
+               r:lista.join(','), v:(v)=>normList(v)===lista.join(','), x:`${lista.join(',')}.` };
   const denMax = dificultad==='facil'?8 : dificultad==='dificil'?14 : 10;
   const a = rint(1,4), c = rint(2,denMax);
   const b = rint(1,4), d = rint(2,denMax);
   const mm = (c*d)/gcd(c,d);
   const sNum = a*(mm/c) + b*(mm/d);
   const resp = simpFrac(sNum, mm);
-  const q3 = {
-    e:`${a}/${c} + ${b}/${d} = ? (fracción simplificada)`,
-    tipo:"texto",
-    r:resp,
-    v:(v)=>v.replace(/\s/g,'')===resp,
-    x:`m.c.m.(${c},${d})=${mm} → suma ${sNum}/${mm} = ${resp}.`
-  };
-
+  const q3 = { e:`${a}/${c} + ${b}/${d} = ? (fracción simplificada)`, tipo:"texto",
+               r:resp, v:(v)=>v.replace(/\s/g,'')===resp, x:`m.c.m.(${c},${d})=${mm} → suma ${sNum}/${mm} = ${resp}.` };
   const k = rint(...pickRange([2,6],[2,7],[3,10]));
   const sol = rint(...pickRange([2,10],[2,12],[3,20]));
   const cte = rint(...pickRange([-8,8],[-10,10],[-20,20]));
   const rhs = k*sol + cte;
   const q4 = { e:`${k}x ${cte>=0?'+':''}${cte} = ${rhs}. ¿x = ?`, tipo:"num", r:sol, x:`${k}x = ${rhs} ${cte>=0?'-':''} ${Math.abs(cte)} → ${k}x = ${k*sol} → x = ${sol}.` };
-
   const b2 = rint(...pickRange([4,9],[5,12],[8,16]));
   const h2 = rint(...pickRange([3,8],[3,10],[6,14]));
   const q5 = { e:`Área de rectángulo ${b2}×${h2}`, tipo:"num", r:b2*h2, x:`${b2}×${h2} = ${b2*h2}.` };
 
   const preguntas = [q1, q2, q3, q4, q5];
-
   let aciertos=0;
   const c = document.getElementById('contenido');
   c.innerHTML = `<div class="card"><h3>Mini‑Quiz (5)</h3>
     <div class="muted">Dificultad actual: <b>${dificultad.toUpperCase()}</b></div>
     <div id="quiz"></div></div>`;
   const qz = document.getElementById('quiz');
-
   preguntas.forEach((q,i)=>{
     const inp = q.tipo==='num'?`<input type="number" id="mq_${i}">`:`<input type="text" id="mq_${i}">`;
     const div = document.createElement('div');
     div.className='q';
     div.innerHTML = `<div>${i+1}) ${q.e}</div>
-      <div>${inp} <button class="btn" onclick="mqCheck(${i})">Comprobar</button></div>
+      <div>${inp} <button class="btn" id="btn_mq_${i}">Comprobar</button></div>
       <div id="mqfb_${i}"></div>`;
     qz.appendChild(div);
+    document.getElementById(`btn_mq_${i}`).addEventListener('click', ()=>{
+      const v = document.getElementById('mq_'+i).value.trim();
+      let ok=false;
+      if(q.v){ ok = q.v(v); }
+      else if(q.tipo==='num'){ ok = Number(v)==q.r; }
+      else { ok = v.replace(/\s/g,'')===String(q.r); }
+      if(ok) aciertos++;
+      document.getElementById('mqfb_'+i).innerHTML = ok ? `<span class="ok">¡Correcto!</span>` : `<span class="err">Incorrecto.</span> <span>${q.x}</span>`;
+    });
   });
-
-  window.mq = {preguntas, aciertos};
   const fin = document.createElement('div');
   fin.style.marginTop='10px';
-  fin.innerHTML = `<button class="btn primary" onclick="mqFin()">Finalizar quiz</button>
-                   <button class="btn" onclick="miniQuiz()">Repetir (nuevas)</button>
-                   <button class="btn" onclick="volverMenu()">Volver al Menú</button>`;
+  fin.innerHTML = `<button id="btn_fin" class="btn primary">Finalizar quiz</button>
+                   <button id="btn_rep" class="btn">Repetir (nuevas)</button>
+                   <button id="btn_volver2" class="btn">Volver al Menú</button>`;
   qz.appendChild(fin);
-}
-function mqCheck(i){
-  const q = window.mq.preguntas[i];
-  const v = document.getElementById('mq_'+i).value.trim();
-  let ok=false;
-  if(q.v){ ok = q.v(v); }
-  else if(q.tipo==='num'){ ok = Number(v)==q.r; }
-  else { ok = v.replace(/\s/g,'')===String(q.r); }
-  if(ok) window.mq.aciertos++;
-  document.getElementById('mqfb_'+i).innerHTML = ok ? `<span class="ok">¡Correcto!</span>` : `<span class="err">Incorrecto.</span> <span>${q.x}</span>`;
-}
-function mqFin(){
-  const n = window.mq.aciertos;
-  const c = document.getElementById('contenido');
-  c.innerHTML = `<div class="card">
-    <h3>Resultado</h3>
-    <div class="msg">Tu puntaje: <b>${n}/5</b>. Dificultad: <b>${dificultad}</b></div>
-    <p>${n>=4?'¡Excelente! Sigue así.':'¡Buen intento! Puedes repasar y volver a intentarlo.'}</p>
-    <div class="chips">
-      <button class="btn" onclick="miniQuiz()">Repetir quiz</button>
-      <button class="btn primary" onclick="volverMenu()">Volver al Menú</button>
-    </div>
-  </div>`;
+  document.getElementById('btn_fin').addEventListener('click', ()=>{
+    c.innerHTML = `<div class="card">
+      <h3>Resultado</h3>
+      <div class="msg">Tu puntaje: <b>${aciertos}/5</b>. Dificultad: <b>${dificultad}</b></div>
+      <p>${aciertos>=4?'¡Excelente! Sigue así.':'¡Buen intento! Puedes repasar y volver a intentarlo.'}</p>
+      <div class="chips">
+        <button id="btn_rep2" class="btn">Repetir quiz</button>
+        <button id="btn_volver3" class="btn primary">Volver al Menú</button>
+      </div>
+    </div>`;
+    document.getElementById('btn_rep2').addEventListener('click', miniQuiz);
+    document.getElementById('btn_volver3').addEventListener('click', volverMenu);
+  });
+  document.getElementById('btn_rep').addEventListener('click', miniQuiz);
+  document.getElementById('btn_volver2').addEventListener('click', volverMenu);
 }
 
-// Inicializa
-renderMenu();
+// Bind de eventos de UI principales (sin onclick inline)
+function bindTopBar(){
+  const bF = document.getElementById('dif_facil');
+  const bM = document.getElementById('dif_medio');
+  const bD = document.getElementById('dif_dificil');
+  if(bF && bM && bD){
+    bF.addEventListener('click', ()=>setDificultad('facil'));
+    bM.addEventListener('click', ()=>setDificultad('medio'));
+    bD.addEventListener('click', ()=>setDificultad('dificil'));
+  }
+  const btnQuiz = document.getElementById('btn_quiz');
+  if(btnQuiz) btnQuiz.addEventListener('click', miniQuiz);
+}
+
+// Inicialización robusta
+function init(){
+  bindTopBar();
+  renderMenu();
+}
+document.addEventListener('DOMContentLoaded', ()=> {
+  try{ init(); } catch(e){ console.error('Init error:', e); }
+});
+// Fallback por si algo retrasa el DOM
+setTimeout(()=>{ try{
+  const m = document.getElementById('menu');
+  if(m && m.children.length===0) init();
+} catch(e){} }, 700);
 </script>
 </body>
 </html>
