--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
 <header>
-  <h1>Entrenamiento de Matemática para ingresantes (Escuela N° 3117 “La Reyes”) — flujo creado con IA según la cartilla institucional</h1>
+  <h1>Entrenamiento de Matemática para ingresantes (Escuela N° 3117 “La Reyes”) — Flujo creado con IA según la cartilla institucional</h1>
 </header>
 
 <main>
@@ -61,6 +61,12 @@
 </main>
 
 <!-- BLOQUE DE DEBUG -->
+<script>
+(function(){
+  // ... debug ...
+})();
+</script>
+<!-- FIN BLOQUE DE DEBUG -->
 <script>
 (function(){
   const box=document.createElement('div');
