--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
 <header>
-  <h1>Entrenamiento de Matemática para ingresantes (Escuela N° 3117 “La Reyes”) — Flujo creado con IA según la cartilla institucional</h1>
+  <h1>Entrenamiento de Matemática para ingresantes (Escuela N° 3117 “La Reyes”) — flujo creado con IA según la cartilla institucional</h1>
 </header>
 
 <main>
@@ -63,12 +63,6 @@
 <!-- BLOQUE DE DEBUG -->
 <script>
 (function(){
-  // ... debug ...
-})();
-</script>
-<!-- FIN BLOQUE DE DEBUG -->
-<script>
-(function(){
   const box=document.createElement('div');
   box.style.cssText='position:fixed;bottom:10px;right:10px;max-width:50vw;max-height:40vh;overflow:auto;background:#111;color:#0f0;padding:10px;border-radius:8px;font:12px monospace;z-index:99999';
   document.body.appendChild(box);
@@ -79,10 +73,14 @@
 </script>
 <!-- FIN BLOQUE DE DEBUG -->
 
-<!-- TU SCRIPT ORIGINAL VA AQUÍ (después del debug) -->
 <script>
-/* ... TODO TU SCRIPT AQUÍ ... */
-</script>
-</body>
-</html>
-?v=17
+let dificultad = 'medio';
+function rint(a,b){ return Math.floor(Math.random()*(b-a+1))+a; }
+function pickRange(easy, medium, hard){ return dificultad==='facil'?easy : (dificultad==='dificil'?hard:medium); }
+function gcd(a,b){ a=Math.abs(a); b=Math.abs(b); while(b){ [a,b]=[b,a%b]; } return a||1; }
+function simpFrac(num, den){ const g=gcd(num,den); return `${num/g}/${den/g}`; }
+function normList(v){ return v.split(/[,\s]+/).filter(x=>x).map(x=>x.replace(/\s/g,'')).join(',').replace(/,+$/,''); }
+function near(v, target, tol){ const x = parseFloat(String(v).replace(',', '.')); return isFinite(x) && Math.abs(x - target) <= tol; }
+
+const temas = [
+  { id:"naturale
